--- a/home.html
+++ b/home.html
@@ -33,8 +33,9 @@
 		<!-- Main Theme Styles + Bootstrap-->
 		<link rel="stylesheet" media="screen" href="css/theme.min.css">
 		<style>
-      .inner_header{
-        background-color: #d7d4d4bd;
+			.inner_header{
+				
+        background-color: #d7d4d4bd !important; 
       }
     </style>
 	</head>
