--- a/product.html
+++ b/product.html
@@ -36,156 +36,7 @@
     />
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" media="screen" href="css/theme.min.css" />
-    <style>
-      .custom-product-card {
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-      }
-
-      .custom-product-card:hover {
-        transform: translateY(-8px); /* Nâng nhẹ lên khi hover */
-      }
-
-      .custom-border {
-        border: 1px solid #e0e0e0;
-        border-radius: 0.5rem;
-      }
-
-      .custom-image-container {
-        display: block;
-        overflow: hidden;
-        position: relative;
-        transition: background-color 0.3s ease;
-      }
-
-      .custom-image-container:hover {
-        background-color: rgba(0, 0, 0, 0.05);
-      }
-
-      .custom-wishlist {
-        background-color: #ffffff;
-        color: #ff6f61;
-        border: none;
-        transition: color 0.3s;
-      }
-
-      .custom-wishlist:hover {
-        color: #dc3545;
-      }
-
-      .custom-product-meta {
-        font-size: 0.85rem;
-        color: #6c757d;
-      }
-
-      .custom-product-title a {
-        font-size: 1rem;
-        font-weight: 600;
-        color: #343a40;
-      }
-
-      /* Giá sản phẩm */
-      .custom-product-price {
-        font-size: 1.1rem;
-      }
-
-      .custom-star-rating i.active {
-        color: #ffc107;
-      }
-
-      .custom-add-to-cart {
-        background-color: #007bff;
-        border: none;
-        font-weight: 500;
-        color: #ffffff;
-        border-radius: 0.25rem;
-        transition: background-color 0.3s;
-      }
-
-      .custom-add-to-cart:hover {
-        background-color: #0056b3;
-      }
-
-      .custom-card-body-hidden {
-        background-color: #f8f9fa;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        transition: opacity 0.3s;
-      }
-
-      .custom-product-card:hover .custom-card-body-hidden {
-        opacity: 1;
-      }
-      .custom-pagination .pagination {
-        margin: 0; 
-      }
-
-      .custom-pagination .page-item {
-        margin: 0 5px;
-      }
-
-      .custom-pagination .page-link {
-        color: #007bff; 
-        border: 1px solid #007bff;
-        border-radius: 4px; 
-        padding: 8px 12px; 
-        transition: background-color 0.3s, color 0.3s; 
-      }
-
-      .custom-pagination .page-link:hover {
-        background-color: #007bff; 
-        color: #fff; 
-      }
-
-      .custom-pagination .active .page-link {
-        background-color: #007bff;
-        color: #fff;
-        border: 1px solid #007bff;
-      }
-
-      .custom-pagination .page-link-static {
-        background-color: transparent;
-        color: #6c757d; 
-        border: none; 
-        padding: 8px 12px; 
-      }
-			.widget {
-  background-color: #f8f9fa; 
-  padding: 1rem;
-  border: 1px solid #dee2e6;
-  border-radius: 0.5rem;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-.widget-title {
-  font-size: 1.25rem;
-  margin-bottom: 1rem;
-  color: #343a40; 
-}
-
-.range-slider {
-  position: relative;
-}
-
-.range-slider-ui {
-  background: #007bff;
-  height: 5px;
-  border-radius: 5px;
-}
-
-.input-group-text {
-  background-color: #e9ecef;
-}
-
-.form-control {
-  border: 1px solid #ced4da;
-}
-
-.form-control:focus {
-  border-color: #007bff; 
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
-
-    </style>
+    <link rel="stylesheet" href="css/product.css">
   </head>
   <!-- Body-->
   <body class="handheld-toolbar-enabled">
