--- a/product.html
+++ b/product.html
@@ -1597,12 +1597,7 @@
           data-bs-target="#shop-sidebar"
           ><span class="handheld-toolbar-icon"
             ><i class="ci-filter-alt"></i></span
-          ><span class="handheld-toolbar-label">Filters</span></a
-        ><a
-          class="d-table-cell handheld-toolbar-item"
-          href="account-wishlist.html"
-          ><span class="handheld-toolbar-icon"><i class="ci-heart"></i></span
-          ><span class="handheld-toolbar-label">Wishlist</span></a
+          ><span class="handheld-toolbar-label">Sắp xếp</span></a
         ><a
           class="d-table-cell handheld-toolbar-item"
           href="javascript:void(0)"
@@ -1614,8 +1609,8 @@
         ><a class="d-table-cell handheld-toolbar-item" href="shop-cart.html"
           ><span class="handheld-toolbar-icon"
             ><i class="ci-cart"></i
-            ><span class="badge bg-primary rounded-pill ms-1">4</span></span
-          ><span class="handheld-toolbar-label">$265.00</span></a
+            ><span class="badge bg-primary rounded-pill ms-1">{4}</span></span
+          ><span class="handheld-toolbar-label">Cart</span></a
         >
       </div>
     </div>
