add checkout-details, payment, review, complete.html diaphuong.js

--- a/header.html
+++ b/header.html
@@ -31,8 +31,8 @@
                 href="cart.html"><span
                   class="navbar-tool-label">4</span><i
                   class="navbar-tool-icon ci-cart"></i></a><a
-                class="navbar-tool-text" href="cart.html"><small>My
-                  Cart</small>$265.00</a>
+                class="navbar-tool-text" href="cart.html"><small>Giỏ hàng
+                  </small>$265.00</a>
             </div>
           </div>
         </div>
