--- a/header.html
+++ b/header.html
@@ -3,17 +3,17 @@
       <div class="navbar navbar-expand-lg navbar-light inner_header">
         <div class="container"><a
             class="navbar-brand d-none d-sm-block flex-shrink-0"
-            href="home.html"><img src="img/logo-dark.png" width="142"
+            href="home.php"><img src="img/logo-dark.png" width="142"
               alt="Cartzilla"></a><a
             class="navbar-brand d-sm-none flex-shrink-0 me-2"
-            href="home.html"><img src="img/logo-icon.png" width="74"
+            href="home.php"><img src="img/logo-icon.png" width="74"
               alt="Cartzilla"></a>
           <div class="d-lg-flex">
             <ul class="navbar-nav flex">
-              <li class="nav-item"><a class="nav-link" href="home.html">Trang
+              <li class="nav-item"><a class="nav-link" href="home.php">Trang
                   chủ</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">Sản phẩm</a>
+              <li class="nav-item"><a class="nav-link" href="product.php">Sản phẩm</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a>
               </li>
@@ -22,7 +22,7 @@
           <div
             class="navbar-toolbar d-flex flex-shrink-0 align-items-center">
             <a class="navbar-tool d-none d-lg-flex"
-              href="account-signin.html"><span
+              href="account-profile.php"><span
                 class="navbar-tool-tooltip">Tài khoản</span>
               <div class="navbar-tool-icon-box"><i
                   class="navbar-tool-icon ci-user"></i></div>
