add account-address, account-payment

--- a/checkout-details.html
+++ b/checkout-details.html
@@ -137,6 +137,17 @@
                   <input class="form-control" type="text" id="particular-address">
                 </div>
               </div>
+              <h6 class="mt-3">Hoặc chọn những địa chỉ đã có</h6>
+              <div class="mb-5">
+                <label for="select-input" class="form-label"></label>
+                <select class="form-select" id="select-input">
+                  <option>Chọn địa chỉ..</option>
+                  <option>Option item 1</option>
+                  <option>Option item 2</option>
+                  <option>Option item 3</option>
+                </select>
+              </div>
+              <hr>
             </div>
             <!-- Navigation (desktop)-->
             <div class="d-none d-lg-flex pt-4 mt-3">
