refactor: no handheld attribute

--- a/account-address.html
+++ b/account-address.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" media="screen" href="css/theme.min.css">
   </head>
   <!-- Body-->
-  <body class="handheld-toolbar-enabled">
+  <body>
     <main class="page-wrapper">
       <!-- Add New Address Popup-->
       <form class="needs-validation modal fade" method="post" id="add-address" tabindex="-1" novalidate>
