--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
     
   </head>
   <!-- Body-->
-  <body class="handheld-toolbar-enabled">
+  <body>
     <main class="page-wrapper">
       <div id="header"></div> 
       <!-- Page Title-->
