--- a/checkout-review.html
+++ b/checkout-review.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" media="screen" href="css/theme.min.css">
   </head>
   <!-- Body-->
-  <body class="handheldtoolbar-enabled">
+  <body>
     <main class="page-wrapper">
       <div id="header"></div>
       <!-- Page Title-->
