no-handheld-att

--- a/checkout-review.html
+++ b/checkout-review.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" media="screen" href="css/theme.min.css">
   </head>
   <!-- Body-->
-  <body class="handheldtoolbar-enabled">
+  <body>
     <main class="page-wrapper">
       <div id="header"></div>
       <!-- Page Title-->
@@ -171,15 +171,6 @@
               </div>
             </div>
           </aside>
-        </div>
-        <!-- Navigation (mobile)-->
-        <div class="row d-lg-none">
-          <div class="col-lg-8">
-            <div class="d-flex pt-4 mt-3">
-              <div class="w-50 pe-3"><a class="btn btn-secondary d-block w-100" href="checkout-payment.html"><i class="ci-arrow-left mt-sm-0 me-1"></i><span class="d-none d-sm-inline">Quay lại thanh toán</span><span class="d-inline d-sm-none">Quay lại</span></a></div>
-              <div class="w-50 ps-2"><a class="btn btn-primary d-block w-100" href="checkout-complete.html"><span class="d-none d-sm-inline">Đặt hàng</span><span class="d-inline d-sm-none">Đặt hàng</span><i class="ci-arrow-right mt-sm-0 ms-1"></i></a></div>
-            </div>
-          </div>
         </div>
       </div>
     </main>
