--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" media="screen" href="css/theme.min.css">
   </head>
   <!-- Body-->
-  <body class="handheldtoolbar-enabled">
+  <body>
     <main class="page-wrapper">
       <div id="header"></div>
       <!-- Page Title-->
@@ -153,15 +153,6 @@
             </div>
           </aside>
         </div>
-        <!-- Navigation (mobile)-->
-        <div class="row d-lg-none">
-          <div class="col-lg-8">
-            <div class="d-flex pt-4 mt-3">
-              <div class="w-50 pe-3"><a class="btn btn-secondary d-block w-100" href="checkout-details.html"><i class="ci-arrow-left mt-sm-0 me-1"></i><span class="d-none d-sm-inline">Chỉnh sửa địa chỉ</span><span class="d-inline d-sm-none">Quay lại</span></a></div>
-              <div class="w-50 ps-2"><a class="btn btn-primary d-block w-100" href="checkout-review.html"><span class="d-none d-sm-inline">Xác nhận đơn hàng</span><span class="d-inline d-sm-none">Tiếp theo</span><i class="ci-arrow-right mt-sm-0 ms-1"></i></a></div>
-            </div>
-          </div>
-        </div>
       </div>
     </main>
     <!-- Footer-->
@@ -176,10 +167,7 @@
       loadComponent("header", "header.html");
       loadComponent("footer", "footer.html");
     </script>
-    <!-- Toolbar cho thiet bi cam tay (Default)-->
-    <div class="handheld-toolbar">
-      <div class="d-table table-layout-fixed w-100"><a class="d-table-cell handheld-toolbar-item" href="account-wishlist.html"><span class="handheld-toolbar-icon"><i class="ci-heart"></i></span><span class="handheld-toolbar-label">Wishlist</span></a><a class="d-table-cell handheld-toolbar-item" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" onclick="window.scrollTo(0, 0)"><span class="handheld-toolbar-icon"><i class="ci-menu"></i></span><span class="handheld-toolbar-label">Menu</span></a><a class="d-table-cell handheld-toolbar-item" href="shop-cart.html"><span class="handheld-toolbar-icon"><i class="ci-cart"></i><span class="badge bg-primary rounded-pill ms-1">4</span></span><span class="handheld-toolbar-label">$265.00</span></a></div>
-    </div>
+    
     <!-- Quay ve dau trang--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up">   </i></a>
     <!-- Vendor scrits: js libraries and plugins-->
     <script src="vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
