--- a/header.html
+++ b/header.html
@@ -28,10 +28,10 @@
                   class="navbar-tool-icon ci-user"></i></div>
             <div class="navbar-tool dropdown ms-3"><a
                 class="navbar-tool-icon-box bg-secondary dropdown-toggle"
-                href="cart.html"><span
+                href="cart.php"><span
                   class="navbar-tool-label">4</span><i
                   class="navbar-tool-icon ci-cart"></i></a><a
-                class="navbar-tool-text" href="cart.html"><small>Giỏ hàng
+                class="navbar-tool-text" href="cart.php"><small>Giỏ hàng
                   </small>$265.00</a>
             </div>
           </div>
