--- a/header.html
+++ b/header.html
@@ -28,11 +28,8 @@
                   class="navbar-tool-icon ci-user"></i></div>
             <div class="navbar-tool dropdown ms-3"><a
                 class="navbar-tool-icon-box bg-secondary dropdown-toggle"
-                href="cart.php"><span
-                  class="navbar-tool-label">4</span><i
-                  class="navbar-tool-icon ci-cart"></i></a><a
-                class="navbar-tool-text" href="cart.php"><small>Giỏ hàng
-                  </small>$265.00</a>
+                href="cart.php"><i
+                  class="navbar-tool-icon ci-cart"></i></a></a>
             </div>
           </div>
         </div>
